tests/baselines/reference/parserAssignmentExpression1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Expressions/parserAssignmentExpression1.ts (3 errors) ====
    (foo()) = bar;
    ~~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
     ~~~
!!! error TS2304: Cannot find name 'foo'.
              ~~~
!!! error TS2304: Cannot find name 'bar'.